fixed spacing issues on delete and update pages for the buttons: made release date from/to dates display position more consistent.

--- a/_step3_staticHTML/static/css/del_element.css
+++ b/_step3_staticHTML/static/css/del_element.css
@@ -55,7 +55,6 @@ h2 {
 
 #selDelEleTable {
 	margin: auto;
-	margin-right: 75px;
 }
 
 #selDelEleTable td {
