--- a/_step3_staticHTML/static/css/update_element.css
+++ b/_step3_staticHTML/static/css/update_element.css
@@ -54,7 +54,6 @@ h2 {
 
 #selUpdateEleTable {
 	margin: auto;
-	margin-right: 65px;
 }
 
 #selUpdateEleTable td {
